fix: align-text

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -57,11 +57,10 @@ $primary: #62262A;
     }
 
     .es-desc {
-        font-size: 25px;
+        font-size: 30px;
         color: $primary;
         text-align: center;
         margin-block: 0 16px;
-        text-transform: uppercase;
     }
 
     @media (min-width: 1024px) {
@@ -70,7 +69,7 @@ $primary: #62262A;
         }
 
         .es-desc {
-            font-size: 45px;
+            font-size: 50px;
             margin-block: 0 32px;
         }
     }
